@@ -110,7 +110,7 @@ public class OpenGuideHotkey {
             return;
         }
 
-        var found = guidebookPages.get(0);
+        var found = guidebookPages.getFirst();
 
         var current = GuideScreen.current();
         if (current != null && found.page.pageId()
@@ -139,7 +139,7 @@ public class OpenGuideHotkey {
             return false;
         }
 
-        var found = pages.get(0);
+        var found = pages.getFirst();
         var current = GuideScreen.current();
         if (current != null && found.page.pageId()
             .equals(current.getCurrentPageId())) {
@@ -181,10 +181,10 @@ public class OpenGuideHotkey {
 
         var sb = new StringBuilder();
         sb.append(EnumChatFormatting.GRAY);
-        sb.append("|".repeat(filled));
+        sb.repeat("|", filled);
         if (filled < totalChars) {
             sb.append(EnumChatFormatting.DARK_GRAY);
-            sb.append("|".repeat(totalChars - filled));
+            sb.repeat("|", totalChars - filled);
         }
         return sb.toString();
     }
@@ -223,7 +223,7 @@ public class OpenGuideHotkey {
         if (holding) {
             if (ticksKeyHeld < TICKS_TO_OPEN && ++ticksKeyHeld == TICKS_TO_OPEN) {
                 if (!guidebookPages.isEmpty()) {
-                    var found = guidebookPages.get(0);
+                    var found = guidebookPages.getFirst();
                     List<PageAnchor> allPages = found.guide.getIndex(ItemMultiIndex.class)
                         .findAllByStack(stack);
                     PageAnchor target = allPages.size() > 1 ? GuideItemLinksPage.anchorForStack(stack) : found.page;
@@ -295,7 +295,7 @@ public class OpenGuideHotkey {
         boolean held = isKeyHeld();
         if (held) {
             if (questTicksKeyHeld < TICKS_TO_OPEN && ++questTicksKeyHeld == TICKS_TO_OPEN) {
-                var found = questGuidebookPages.get(0);
+                var found = questGuidebookPages.getFirst();
                 var mc = Minecraft.getMinecraft();
                 if (mc.currentScreen instanceof GuideUiHost) {
                     ((GuideUiHost) mc.currentScreen).navigateTo(found.guide.getId(), found.page);
